public/stylesheets/main.css
body {
  overflow: hidden;
}

.hide, .error {
  display: none;
}

.editmode {
    display: none;
}

.ed-banner, .ch-banner, .fb-banner {
    margin: 0;
    padding: 5px 0 10px 0;
    position: absolute;
    bottom: 0;
    width: 100%;
    font-size: 30px;
    font-family: 'Reenie Beanie', serif;
    background: #DAE02F;
}

.ed-banner{
    padding: 3px 0 3px 0;
    font-size: 25px;
}
.ch-banner {
    height: 60px;
    background: #970610;
}

.fb-banner .contact {
    float: left;
}

.fb-banner .login {
    float: right;
}

.folio {
    margin: 20px 0 10px 0;
    padding: 10px 0;
    width: 100%;
    font-size: 30px;
    font-family: 'Droid Sans', serif;
    background: #EFFAB4;
}

.folio .domain {
    border: none;
    border-bottom: 2px #e0e0e0 dashed;
    font-size: 60px;
    font-family: 'Reenie Beanie', serif;
    color: #000000;
    background: #EFFAB4;
    height: 100px;
}

.settings {
    width: 300px;
    opacity: 0.7;
    padding: 10px;
    top: 100px;
    right: 100px;
    position: absolute;
    background: #000000;
    cursor: move;
}

.settings h3 a {
    color: #ffffff;
    font-size: 15px;
    font-family: 'IM Fell DW Pica', serif;
    text-decoration: none;
    text-transform: uppercase;
    text-shadow: 3px 3px 3 #ffffff;
}

.settings h3 a:hover {
    opacity: 0.6;
    color: #000000;
    background: #ffffff;
}

input[type = text] {
    padding: 5px;
    width: 200px;
    border: 1px #e0e0e0 solid;
    color: #000000;
    background: #ffffff;
}

textarea {
    margin: 2px 0;
    padding: 5px;
    border: 1px #e0e0e0 solid;
}

.controls li {
    float: left;
    padding: 3px 5px 3px 0;
}

.controls a {
    color: #ffffff;
}

#colorpicker {
    display: none;
}

.clear{
  clear:both;
}
/*******showcase.css*********/
body.showcase div.navigator {
  left: 0;
  bottom: 0;
  color: #fff;
  width: 100%;
  height: 50px;
  opacity: 0.8;
  position: absolute;
  text-align: center;
  padding: 10px 0;
  background-color: #000000;
}
body.showcase {
  width: 960px;
  margin: 0px auto;
  background: #000;
  overflow: hidden;
}
/*******www.css*********/
body.www {
  font-size: 30px;
  font-family: 'Reenie Beanie', serif;
  background-color: #8dc73f;
}
body.www .container{
  width: 960px;
  height: 800px;
  margin: 0px auto;
  background: #8dc73f url(/public/images/bkgrnd.png) no-repeat;
}
body.www .invcontainer{
  padding-top: 300px;
  padding-left: 275px;
}
body.www input {
    padding: 5px;
    width: 300px;
    border: 4px #e0e0e0 solid;
    border-right: none;
    color: #000000;
    background: #ffffff;
    margin: 0;
    font-size: 30px;
    font-family: 'Reenie Beanie', serif;
}
body.www input[type = submit]:hover {
    background: #666666;
    color: #ffffff;
    cursor: pointer;
}
body.www input[type = submit] {
    width: 170px;
    border: 4px #e0e0e0 solid;
    border-left: none;
    background: #00b8d7;
    margin-left: -12px;
}
body.www .thank {
  text-align: center;
}
/*******prakhar.css*********/
body.prakhar {
  color: #a1502e;
  font-family: Arial;
  background: #ffffff url(/public/images/prakhar.png) no-repeat;
}
body.prakhar div.container {
  top: 50px;
  left: 50px;
  position: absolute;
}
body.prakhar div.cleft div.fld,
body.prakhar a {
  float: right;
  color: #a1502e;
  font-size: 10pt;
  text-decoration: none;
  padding: 5px 20px 0 10px;
}
body.prakhar a:hover {
  color: #e28f38;
  font-style: italic;
}
body.prakhar div.cleft div.name {
  color: #e28f38;
  font-size: 30pt;
  letter-spacing: 4px;
  padding: 10px 3px;
}
body.prakhar div.cleft {
  background: #ffffff url(/public/images/prakharline.png) no-repeat right;
  height: 210px;
  float: left;
}
body.prakhar div.cright {
  float:right;
  margin: 100px 0 0 10px;
}
body.prakhar div.line1 {
  letter-spacing: 2px;
}
body.prakhar div.line2 {
  letter-spacing: 2px;
  padding-bottom: 4px;
}
/*******uttara.css*********/
body.uttara {
  background: #000000 url(/public/images/uttara.png) no-repeat;
  color: #E6E6E6;
  font-family: Georgia;
}
body.uttara div.container {
  top: 50px;
  left: 50px;
  width: 450px;
  padding: 30px 10px;
  position: absolute;
  background-color: #000000;
}
body.uttara h3.fld {
  border-bottom: 2px dashed #ffffff;
  padding: 4px 0 3px 0;
  font-size: 16pt;
  cursor: pointer;
  margin-bottom: 3px;
}
body.uttara div.fld {
  margin: 0 0 10px 0;
  padding: 10px 0 3px 0;
  font-size: 12pt;
}
body.uttara .name {
  background: #000000 url(/public/images/uttaraheader.png) no-repeat;
  font-size: 60pt;
  height: 120px;
}
body.uttara div.desig {
  border-bottom: 2px dashed #ffffff;
  font-size: 10pt;
  text-align: right;
  margin-bottom: 10px;
}
body.uttara span.exp {
  float: right;
}
/*******gopi.css*********/
body.gopi { margin-left:auto;margin-right:auto;width:960px; height:600px; background-color:#ffffff; }
body.gopi a { text-decoration: none; color: #BCBDAC; }
body.gopi a:hover { text-decoration: overline; color: #2E2633; }
body.gopi div.container { padding: 250px 0 0 350px; }
body.gopi div.name { font-family: 'Yanone Kaffeesatz', arial; font-size: 60px; }
body.gopi .head{ height:10px; width:10px; background:black; position:absolute; top:30px; left:30px; display:none;}
body.gopi .box{ height:10px; width:10px; background:green; position:absolute; top:30px; left:30px; display:none;}
body.gopi .plant{ height:10px; width:10px; background:red; position:absolute; top:10px; left:10px; display:none;}
body.gopi .scorebd{ height:30px; width:100%;  background:red; position:absolute; bottom:0px; left:0px; display:block; text-align: center; font-size: 15px; padding: 4px 0; }

